# cynic

./: CHANGELOG.md
cynic/: Cargo.toml
cynic-codegen/: Cargo.toml
cynic-codegen/src/enum_derive/: mod.rs
cynic-codegen/src/fragment_arguments_derive/: mod.rs
cynic-codegen/src/fragment_derive/: mod.rs
cynic-codegen/src/inline_fragments_derive/: mod.rs
cynic-codegen/src/query_dsl/: field_selector.rs  selection_builder.rs
cynic-introspection-query/: Cargo.toml
cynic-introspection-query/src/: query.rs
cynic-querygen/src/query_parsing/: inputs.rs  mod.rs
cynic/examples/: simple.rs  simple_v2.rs
cynic/src/: argument.rs  field.rs  id.rs  into_argument.rs  lib.rs  query.rs  selection_set.rs  tuple_playground.rs
cynic/src/protocol/transport_ws/: async_client.rs
cynic/tests/: simple_schema_tests.rs
examples/: Cargo.toml
examples/examples/: starwars.rs  subscriptions.rs
tests/querygen-compile-run/: build.rs
tests/ui-tests/tests/cases/: inputobject-guess-validation.stderr
