[package]
name = "cynic-introspection-query"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { path = "../cynic", version = "0.12.2" }

[dev-dependencies]
maplit = "1.0.2"
assert_matches = "1.4"
insta = "1.4"
